--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -28,19 +28,31 @@
         justify-content: space-between;
       "
     >
-      <div id="header-left">
+    <!--imagen-->
+    <div id="header-left">
         <img src="logo.svg" alt="logo"/>
+    </div>
+    <!--links-->
+      <div id="header" class="navbar">
+        <input type="checkbox" id="navbar-toggle" class="navbar-toggle-checkbox">
+        <label for="navbar-toggle" class="navbar-toggle-label">
+          <span class="toggle-icon"></span>
+        </label>
+        <div class="navbar-items">
+          <!-- Navbar items here -->
+          <p><a class='nav-a' href="#">Nosotros</a></p>
+          <p><a class='nav-a' href="#">Programas</a></p>
+          <p><a class='nav-a' href="#">Capacitaciones</a></p>
+          <p><a class='nav-a' href="#">Alianzas</a></p>
+          <p><a class='nav-a' href="#">Contacto</a></p>
+          <button class="redondo">Sumate +</button>
+          <i class="fab fa-instagram nav-i"></i>
+          <i class="fab fa-linkedin-in nav-i"></i>
+        </div>
       </div>
-      <div id="header-right" style="display: flex; align-items: center">
-        <p>Nosotros</p>
-        <p>Programas</p>
-        <p>Capaciontaciones</p>
-        <p>Alianzas</p>
-        <p>Contacto</p>
-        <button class="redondo">Sumate +</button>
-        <i class="fab fa-instagram nav-i"></i>
-        <i class="fab fa-linkedin-in nav-i"></i>
+      <!--fin links-->
       </div>
+      
     </div>
 
     <!-- Intro -->
@@ -52,7 +64,7 @@
         </h1>
       </div>
       <div id="introduction-actions" style="margin-top: 25px;margin-bottom: 50px;">
-        <button class="redondo">Contactanos -></button>
+        <button class="redondo">Contactanos <i class="fa-solid fa-arrow-right fa-2xs"></i></button>
         <button class="redondo btn-color" style="margin-left: 14px">
           Sumate +
         </button>
@@ -111,7 +123,7 @@
             en IT, apuntando a lograr la inserción laboral de personas en el
             mundo tecnológico.
           </p>
-          <button class="redondo">Mas info</button>
+          <button class="redondo">Mas info <i class="fa-solid fa-arrow-right fa-2xs"></i></button>
         </div>
       </div>
 
@@ -124,7 +136,7 @@
             blandas necesarias para afrontar la revolución tecnológica del siglo
             XXI.
           </p>
-          <button class="redondo">Mas info</button>
+          <button class="redondo">Mas info <i class="fa-solid fa-arrow-right fa-2xs"></i></button>
         </div>
         <div class="columna">
           <img
@@ -156,7 +168,7 @@
             fraudes virtuales. En esta capacitación vas a aprender diferentes
             tips y consejos útiles para navegar de manera más segura.
           </p>
-          <button class="redondo">Mas info</button>
+          <button class="redondo">Mas info <i class="fa-solid fa-arrow-right fa-2xs"></i></button>
         </div>
       </div>
 
@@ -168,7 +180,7 @@
             niños y niñas donde se brindan herramientas de seguridad y
             autocuidado digital.
           </p>
-          <button class="redondo">Mas info</button>
+          <button class="redondo">Mas info <i class="fa-solid fa-arrow-right fa-2xs"></i></button>
         </div>
         <div class="columna">
           <img
@@ -189,13 +201,13 @@
                 <div class="content-equipo">
                     <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./mujerPerfil.png"
                     alt="Imagen"
                     />
                     <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
@@ -204,11 +216,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./hombrePerfil.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -219,11 +231,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./shake.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -234,11 +246,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./mujerPerfil.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -249,11 +261,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./hombrePerfil.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -264,11 +276,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./shake.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -279,11 +291,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./mujerPerfil.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -294,11 +306,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./hombrePerfil.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -309,11 +321,11 @@
                 <div class="content-equipo">
                 <img
                     class="equipo-img"
-                    src="./estafas-virtuales-04-600x453.jpg"
+                    src="./shake.png"
                     alt="Imagen"
                 />
                 <div class="equipo-detalles">
-                    <h3>Nombre</h3>
+                    <h3>Nombre Apellido</h3>
                     <p>Posición</p>
                     <a class='equipo-a' href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -325,9 +337,30 @@
     <!-- Alianzas -->
     <section class="container-alianza">
         <h2 class="header titulo">.Alianzas</h2>          
-        <div>
-            <p>hola</p>
-        </div>
+        <div class="carousel-container">
+            <div class="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                  <img src="logo.svg" alt="Icon 1">
+                </div>
+                <div class="carousel-item">
+                  <img src="logo.svg" alt="Icon 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="logo.svg" alt="Icon 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="logo.svg" alt="Icon 4">
+                </div>
+                <div class="carousel-item">
+                  <img src="logo.svg" alt="Icon 5">
+                </div>
+              </div>
+            </div>
+            <button class="carousel-arrow carousel-prev">&#8249;</button>
+            <button class="carousel-arrow carousel-next">&#8250;</button>
+          </div>
+          
       </section>
 
     <!-- Footer -->
@@ -349,7 +382,7 @@
             </div>
             <div class="columna-footer">
                 <div>
-                    <a class="titulos-footer titulos-a" href="#">
+                    <a class="titulos-footer footer-iconos titulos-a" href="#">
                         <i class="fab fa-instagram footer-iconos"></i>
                         INSTAGRAM
                     </a>
